Project import generated by Copybara.
GitOrigin-RevId: 5c8d395f6179e988ed2239f6edbfb25e95d39cca